--- a/style.css
+++ b/style.css
@@ -25,12 +25,49 @@
     width: 60%;
 }
 
-.section {
+#moi {
     padding:0.5em;
+}
+
+#bio {
+    padding:0.5em;
+}
+
+#objectifs {
+    padding:0.5em;
+}
+
+#projets {
+    padding:0.5em;
+}
+
+#contact {
+    padding:0.5em;
+}
+
+label {
+    display: block;
+    margin: 1em;
+}
+
+input {
+    width: 20em;
+}
+
+form {
+    width: 30em;
+}
+
+#top {
+
 }
 
 .footer {
     height: 20%;
     width: 100%;
     float: left;
+}
+
+a:hover {
+    color: red;
 }
